--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -25,7 +25,7 @@
         {% for product in product_list %}
         <tr>
             <td>{{ forloop.counter }}</td>
-            <td>{{ product.name }}</td>
+            <td><a href="{% url 'product:detail' pk=product.id %}">{{ product.name }}</a></td>
             <td>{{ product.price }} 원</td>
             <td>EDIT</td>
             <td>PRICE</td>
