--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -5,10 +5,11 @@
     <title>Product List</title>
 </head>
 <body>
-    {#  product_list : Product.objects.all() : DB에 있는 모든 Product 꺼내서 변수에 넣어줌 #}
 {#    {% for product in product_list%}#}
 {#        {{ product.name }} || {{ product.price }}#}
 {#    {% endfor %}#}
+    {#  product_list : Product.objects.all() : DB에 있는 모든 Product 꺼내서 변수에 넣어줌 #}
+    <a href="{% url 'product:add' %}">Add Product</a>
     <table>
         <thead>
         <tr>
