--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -28,7 +28,7 @@
             <td>{{ forloop.counter }}</td>
             <td><a href="{% url 'product:detail' pk=product.id %}">{{ product.name }}</a></td>
             <td>{{ product.price }} 원</td>
-            <td>EDIT</td>
+            <th><a href="{% url 'product:edit' pk=product.id %}"><button>EDIT</button></a></th>
             <td>PRICE</td>
         </tr>
         {%  endfor %}
