models_get_absolute_url() : 수정했을 때 성공하면, model의 detail로 가는 함수

--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -12,5 +12,6 @@
         <li>{{ product.price }}</li>
     </ul>
     <a href="{% url 'product:list' %}">집으로 가</a>
+    <a href="{% url 'product:edit' pk=product.id %}">수정</a>
 </body>
 </html>
