--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Product List</title>
-</head>
-<body>
+{%  extends 'base.html' %}
+
+{% block title %}Product list{% endblock %}
+
 {#    {% for product in product_list%}#}
 {#        {{ product.name }} || {{ product.price }}#}
 {#    {% endfor %}#}
@@ -35,6 +32,3 @@
 
         </tbody>
     </table>
-
-</body>
-</html>
