--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Product Detail</title>
-</head>
-<body>
-    <h1>{{ product }}</h1>
-    <ul>
-        <li>{{ product.id }}</li>
-        <li>{{ product.name }}</li>
-        <li>{{ product.price }}</li>
-    </ul>
-    <a href="{% url 'product:list' %}">집으로 가</a>
-    <a href="{% url 'product:edit' pk=product.id %}">수정</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Product detail{% endblock %}
+
+{%  block content %}
+<h1>{{ product }}</h1>
+<ul>
+    <li>{{ product.id }}</li>
+    <li>{{ product.name }}</li>
+    <li>{{ product.price }}</li>
+</ul>
+<a href="{% url 'product:list' %}">집으로 가</a>
+<a href="{% url 'product:edit' pk=product.id %}">수정</a>
+{%  endblock %}
