--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     {% block content %}
     {% endblock %}
 
+    {% block pagination %}
+    {% endblock %}
+
     <!--bootstrap js 추가-->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
