--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -7,7 +7,7 @@
 {#        {{ product.name }} || {{ product.price }}#}
 {#    {% endfor %}#}
     {#  product_list : Product.objects.all() : DB에 있는 모든 Product 꺼내서 변수에 넣어줌 #}
-    <a class="btn btn-success" href="{% url 'product:add' %}">Add Product</a>
+    <a class="btn btn-success" href="{% url 'product:add2' %}">Add Product</a>
     <table class="table">
         <thead>
         <tr>
@@ -24,7 +24,7 @@
         {% for product in product_list %}
         <tr>
             <td class="align-middle">{{ forloop.counter }}</td>
-            <td  class="align-middle"><a href="{% url 'product:detail' pk=product.id %}">{{ product.name }}</a></td>
+            <td  class="align-middle"><a href="{% url 'product:detail2' pk=product.id %}">{{ product.name }}</a></td>
             <td  class="align-middle">{{ product.price }} 원</td>
             <th  class="align-middle"><a href="{% url 'product:edit' pk=product.id %}"><button class="btn btn-primary">EDIT</button></a></th>
             <td  class="align-middle"><a href="{% url 'product:remove' pk=product.id %}"><button class="btn btn-danger">REMOVE</button></a></td>
