--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -10,5 +10,5 @@
     <li>{{ product.price }}</li>
 </ul>
 <a class="btn btn-primary" href="{% url 'product:list2' %}">집으로 가</a>
-<a class="btn btn-warning" href="{% url 'product:edit' pk=product.id %}">수정</a>
+<a class="btn btn-warning" href="{% url 'product:edit2' pk=product.id %}">수정</a>
 {%  endblock %}
