--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -27,7 +27,7 @@
             <td  class="align-middle"><a href="{% url 'product:detail2' pk=product.id %}">{{ product.name }}</a></td>
             <td  class="align-middle">{{ product.price }} 원</td>
             <th  class="align-middle"><a href="{% url 'product:edit2' pk=product.id %}"><button class="btn btn-primary">EDIT</button></a></th>
-            <td  class="align-middle"><a href="{% url 'product:remove' pk=product.id %}"><button class="btn btn-danger">REMOVE</button></a></td>
+            <td  class="align-middle"><a href="{% url 'product:remove2' pk=product.id %}"><button class="btn btn-danger">REMOVE</button></a></td>
         </tr>
         {%  endfor %}
 
