--- a/product/templates/product/product_update.html
+++ b/product/templates/product/product_update.html
@@ -3,9 +3,9 @@
 {% block title %}Product update{% endblock %}
 
 {% block content %}
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Edit">
+        <input type="submit" value="Edit" class="btn btn-primary">
     </form>
 {% endblock %}
