--- a/product/templates/product/product_create.html
+++ b/product/templates/product/product_create.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     {#  product_list : Product.objects.all() : DB에 있는 모든 Product 꺼내서 변수에 넣어주자  #}
-    <form action="" method="post">
+    <form action="" method="post", enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_table }}
         <input type="submit" value="Add">
