--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -12,6 +12,7 @@
         <thead>
         <tr>
             <th>#</th>
+            <th>제품 사진</th>
             <th>제품명</th>
             <th>가격</th>
             <th>EDIT</th>
@@ -24,6 +25,13 @@
         {% for product in product_list %}
         <tr>
             <td class="align-middle">{{ forloop.counter }}</td>
+            <td class="align-middle">
+            {% if product.image %}
+                <img class="image-list" src="{{ product.image.url }}" alt="{{ product.name }}"/>
+            {%  else %}
+                제품 사진 없음
+            {% endif %}
+            </td>
             <td  class="align-middle"><a href="{% url 'product:detail2' pk=product.id %}">{{ product.name }}</a></td>
             <td  class="align-middle">{{ product.price }} 원</td>
             <th  class="align-middle"><a href="{% url 'product:edit2' pk=product.id %}"><button class="btn btn-primary">EDIT</button></a></th>
